# 2025-p2-Chrozwel

./: README.md  endpoints.http  pyproject.toml
.git copy/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
.git copy/logs/refs/heads/: main
.git copy/logs/refs/remotes/origin/: HEAD  main
.git copy/objects/pack/: pack-8dd8bda00132a8684a789d744319950b55efffff.idx  pack-8dd8bda00132a8684a789d744319950b55efffff.pack  pack-e4b39f38cb33d00ae65a68847d041c8f31389fac.idx  pack-e4b39f38cb33d00ae65a68847d041c8f31389fac.pack
.git copy/refs/heads/: main
tests/: 2025-p2-Chrozwel.code-workspace  base.py  test_todo.py
todo/: __init__.py
todo/models/: todo.py
todo/views/: routes.py
